[gd_scene load_steps=24 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/singletons/PlayerCamera/PlayerCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Player/PlayerFrames.tres" type="SpriteFrames" id=3]
[ext_resource path="res://src/SpritesWithFlash/Animated/AnimatedSpriteFlash.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/StateMachine/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://src/main/Entity/BaseStates/MoveStates/EntitySubMove.gd" type="Script" id=6]
[ext_resource path="res://src/main/BaseResources/HitPoints/HitPoints.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/DamageDetector/DamageDetector.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Player/WeaponController/PlayerWeaponController.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Player/StateMachine/PlayerMove.gd" type="Script" id=10]
[ext_resource path="res://src/Player/Scent/ScentSpawner.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Player/StateMachine/PlayerRun.gd" type="Script" id=12]
[ext_resource path="res://src/Player/StateMachine/PlayerIdle.gd" type="Script" id=13]
[ext_resource path="res://src/main/Entity/BaseStates/EntitiyInactive.gd" type="Script" id=14]
[ext_resource path="res://src/Player/StateMachine/PlayerDash.gd" type="Script" id=15]
[ext_resource path="res://src/main/Entity/BaseStates/EntityDeath.gd" type="Script" id=16]
[ext_resource path="res://src/main/Entity/BaseStates/EntitySpawn.gd" type="Script" id=17]
[ext_resource path="res://src/main/Entity/BaseStates/EntityDespawn.gd" type="Script" id=18]
[ext_resource path="res://src/Shadow/Shadow.tscn" type="PackedScene" id=19]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float u_alpha : hint_range(0.0, 1.0) = 0.0;
uniform vec4 u_colour: hint_color = vec4(1.0);

void fragment()
{
	vec4 texture_colour = texture(TEXTURE, UV);
	COLOR.rbg = texture_colour.rbg * (1.0 - u_alpha) + u_colour.rbg * u_alpha;
	COLOR.a = texture_colour.a;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/u_alpha = 0.0
shader_param/u_colour = Color( 1, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 3 )

[sub_resource type="RectangleShape2D" id=4]
resource_local_to_scene = true
extents = Vector2( 4, 5 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2147483649
collision_mask = 388
script = ExtResource( 1 )
velocity_max = 100.0
acceleration = 2000.0
friction = 900.0
dash_velocity = 1500.0

[node name="Shadow" parent="." instance=ExtResource( 19 )]
position = Vector2( 0, 0 )

[node name="AnimatedSprite" parent="." instance=ExtResource( 4 )]
material = SubResource( 2 )
position = Vector2( 0, -8 )
scale = Vector2( 1, 1 )
frames = ExtResource( 3 )

[node name="WeaponController" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, -6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0, 1, 0.133333, 1 )
position = Vector2( 0, -4 )
shape = SubResource( 3 )

[node name="CameraRig" parent="." instance=ExtResource( 2 )]

[node name="DamageDetector" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, -4 )
collision_layer = 2147483649
collision_mask = 112

[node name="Collision" parent="DamageDetector" index="0"]
position = Vector2( 0, -2 )
shape = SubResource( 4 )

[node name="HitPoints" parent="." instance=ExtResource( 7 )]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("Move/Idle")

[node name="Inactive" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 17 )

[node name="Despawn" type="Node" parent="StateMachine"]
script = ExtResource( 18 )

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource( 16 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 13 )

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 12 )

[node name="Dash" type="Node" parent="StateMachine/Move"]
script = ExtResource( 15 )

[node name="Stunlock" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )

[node name="ScentSpawner" parent="." instance=ExtResource( 11 )]

[editable path="DamageDetector"]
